website/versioned_docs/version-2.8.x/reference/targets/python_sources.mdx
---
title: python_sources
---

import Field from "@site/src/components/reference/Field";
import styles from "@site/src/components/reference/styles.module.css";

---

Generate a `python_source` target for each file in the `sources` field.

You can either use this target generator or `python_test_utils` for test utility files like `conftest.py`. They behave identically, but can help to better model and keep separate test support files vs. production files.

Backend: <span className="color--primary">``</span>

---

<span className={styles.options}>

## `tags`

<Field
    type_repr={`field.type_hint`}
>

Arbitrary strings to describe a target.

For example, you may tag some test targets with &#x27;integration_test&#x27; so that you could run `./pants --tag='integration_test' test ::` to only run on targets with that tag.

</Field>

## `description`

<Field
    type_repr={`field.type_hint`}
>

A human-readable description of the target.

Use `./pants list --documented ::` to see all targets with descriptions.

</Field>

## `interpreter_constraints`

<Field
    type_repr={`field.type_hint`}
>

The Python interpreters this code is compatible with.

Each element should be written in pip-style format, e.g. `CPython==2.7.*` or `CPython>=3.6,<4`. You can leave off `CPython` as a shorthand, e.g. `>=2.7` will be expanded to `CPython>=2.7`.

Specify more than one element to OR the constraints, e.g. `['PyPy==3.7.*', 'CPython==3.7.*']` means either PyPy 3.7 _or_ CPython 3.7.

If the field is not set, it will default to the option `[python].interpreter_constraints`.

See https://www.pantsbuild.org/v2.8/docs/python-interpreter-compatibility for how these interpreter constraints are merged with the constraints of dependencies.

</Field>

## `dependencies`

<Field
    type_repr={`field.type_hint`}
>

Addresses to other targets that this target depends on, e.g. [&#x27;helloworld/subdir:lib&#x27;].

Alternatively, you may include file names. Pants will find which target owns that file, and create a new target from that which only includes the file in its `sources` field. For files relative to the current BUILD file, prefix with `./`; otherwise, put the full path, e.g. [&#x27;./sibling.txt&#x27;, &#x27;resources/demo.json&#x27;].

You may exclude dependencies by prefixing with `!`, e.g. `['!helloworld/subdir:lib', '!./sibling.txt']`. Ignores are intended for false positives with dependency inference; otherwise, simply leave off the dependency from the BUILD file.

</Field>

## `sources`

<Field
    type_repr={`field.type_hint`}
    default_repr={`('*.py', '*.pyi', '!test_*.py', '!*_test.py', '!tests.py', '!conftest.py', '!test_*.pyi', '!*_test.pyi', '!tests.pyi')`}
>

A list of files and globs that belong to this target.

Paths are relative to the BUILD file&#x27;s directory. You can ignore files/globs by prefixing them with `!`.

Example: `sources=['example.ext', 'test_*.ext', '!test_ignore.ext']`.

</Field>

## `overrides`

<Field
    type_repr={`field.type_hint`}
>

Override the field values for generated `python_source` targets.

Expects a dictionary of relative file paths and globs to a dictionary for the overrides. You may either use a string for a single path / glob, or a string tuple for multiple paths / globs. Each override is a dictionary of field names to the overridden value.

For example:
```
overrides={
  "foo.py": {"skip_pylint": True]},
  "bar.py": {"skip_flake8": True]},
  ("foo.py", "bar.py"): {"tags": ["linter_disabled"]},
}
```

File paths and globs are relative to the BUILD file&#x27;s directory. Every overridden file is validated to belong to this target&#x27;s `sources` field.

If you&#x27;d like to override a field&#x27;s value for every `python_source` target generated by this target, change the field directly on this target rather than using the `overrides` field.

You can specify the same file name in multiple keys, so long as you don&#x27;t override the same field more than one time for the file.

</Field>

## `skip_autoflake`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Autoflake on this target&#x27;s code.

</Field>

## `skip_black`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Black on this target&#x27;s code.

</Field>

## `skip_docformatter`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Docformatter on this target&#x27;s code.

</Field>

## `skip_flake8`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Flake8 on this target&#x27;s code.

</Field>

## `skip_isort`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run isort on this target&#x27;s code.

</Field>

## `skip_mypy`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run MyPy on this target&#x27;s code.

</Field>

## `skip_pyupgrade`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run pyupgrade on this target&#x27;s code.

</Field>

## `skip_bandit`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Bandit on this target&#x27;s code.

</Field>

## `skip_pylint`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run Pylint on this target&#x27;s code.

</Field>

## `skip_yapf`

<Field
    type_repr={`field.type_hint`}
    default_repr={`False`}
>

If true, don&#x27;t run yapf on this target&#x27;s code.

</Field>



</span>